# dreams

./: .gitignore  README.md  chat_with_mm2.py  chat_with_scope.py  pyproject.toml  requirements.txt  tag1_local_sdtio_log.txt  tag2_interaction_copilot  tag2_interaction_copilot-abstract.txt
.kiro/specs/microscope-openwebui/: design.md  requirements.md  tasks.md
agent/: basic_agent.py  basic_agent33.py  test_client.py
dev/: composite_.tif
microscope-server/: README.md  client.py  requirements.txt  server.py  server2.py  server3.py  test_client.py
microscope_mcp/: chat_with_mm2.py  microscope_api.py  microscope_api_real.py  pyproject.toml  server.py  server_real.py  test_pycromanager.py
microscope_mcp_stdio/: chat_with_scope.py  pyproject.toml  server.py
microscope_mm2_uvicorn/: server.py
microscope_openwebui/: microscope_api.py  pyproject.toml  server.py  test_openapi.py
microscope_real/: chat_with_scope_http.py  microscope_api.py  pyproject.toml
microscope_virtual/: README.md  chat_with_scope_http.py  microscope_api.py  server.py
